WIP update runs-on

--- a/nuget-publish/action.yml
+++ b/nuget-publish/action.yml
@@ -16,7 +16,5 @@ outputs:
     description: 'Result of the tests'
 
 runs:
-  using: 'docker'
-  image: 'Dockerfile'
-  args:
-    - ${{ inputs.project-path }}
+  using: 'node12'
+  main: 'dist/index.js'
