--- a/nuget-publish/package.json
+++ b/nuget-publish/package.json
@@ -15,7 +15,8 @@
     "all": "npm run build && npm run format && npm run lint && npm run pack"
   },
   "dependencies": {
-    "@actions/core": "^1.2.0"
+    "@actions/core": "^1.2.0",
+    "@actions/exec": "^1.0.2"
   },
   "devDependencies": {
     "@types/jest": "^24.0.23",
