--- a/nuget-publish/package.json
+++ b/nuget-publish/package.json
@@ -16,7 +16,8 @@
   },
   "dependencies": {
     "@actions/core": "^1.2.0",
-    "@actions/exec": "^1.0.2"
+    "@actions/exec": "^1.0.2",
+    "@actions/io": "^1.0.1"
   },
   "devDependencies": {
     "@types/jest": "^24.0.23",
