--- a/dotnet-publish/package.json
+++ b/dotnet-publish/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@actions/core": "^1.2.0",
     "@actions/exec": "^1.0.2",
+    "@actions/github": "^2.0.0",
     "@actions/io": "^1.0.1"
   },
   "devDependencies": {
